--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 "file-type": "^18.0.0",
 "fluent-ffmpeg": "^2.1.2",
 "form-data": "^4.0.0",
+    "@google/genai": "^0.1.0", 
 "formdata-node": "^5.0.0",
 "google-libphonenumber": "3.2.38",
 "human-readable": "^0.2.1",
