--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 "pino": "^8.6.1",
 "qrcode": "^1.5.1",
 "jsdom": "^20.0.1",
+    "ruhend-scraper": "^7.0.4",
 "syntax-error": "^1.4.0",
 "terminal-image": "^2.0.0",
 "url-regex-safe": "^3.0.0",
