--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lowdb": "^3.0.0",
     "megajs": "^1.1.3",
     "mime-types": "^3.0.1",
+    "sharp": "^0.34.4",
     "node-cache": "^5.1.2",
     "mongoose": "^6.3.3",
     "node-fetch": "^3.2.10",
